[package]
name = "loom_db"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "loom_cli"
path = "src/main.rs"

[dependencies]
uuid = { version = "1.10", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # Útil para debug ou persistência simples
wasm-bindgen = "0.2"
getrandom = {version = "0.2", features = ["js"]}